fixed nav spacing, added mobile styles in flex-row block for project 1 and 2 descriptions

--- a/app/assets/styles/modules/_generic-content-container.css
+++ b/app/assets/styles/modules/_generic-content-container.css
@@ -1,9 +1,11 @@
 .generic-content-container {
   p {
-    font-size: 1.125rem;
-    line-height: 1.625;
     margin: 0.2em 0;
+    line-height: 1.625;
     font-weight: 400;
+    @mixin atSmall {
+      font-size: 1.125rem;
+    }
   }
 
   p a {
