--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -17,7 +17,7 @@
 
   &__menu-content {
     position: relative;
-    padding: 0 18px;
+    padding: 0 24px;
     line-height: 1.75em;
     @mixin atMedium {
       display: flex;
