--- a/app/assets/styles/modules/_subsection-title.css
+++ b/app/assets/styles/modules/_subsection-title.css
@@ -1,12 +1,10 @@
 .subsection-title {
-  font-size: 1.875rem;
-  font-weight: 300;
+  margin: 0 0 1rem 0;
+  font-size: 1.5rem;
   text-align: left;
   @mixin atSmall {
-    margin: 0 0 1rem 0;
     font-size: 2rem;
     line-height: 1.3125;
-    font-weight: 700;
   }
 
   &--grey {
